replace href to redir

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ window.addEventListener("load", function(evt) {
 			var displayName = data.displayName;
 			var statusMessage = data.statusMessage;
 			var pictureUrl = data.pictureUrl;
-			window.location = '/{{sp_id}}/' + mid;
+			window.location = '/sp/{{sp_id}}/' + mid;
 		}, function() {
 			window.location = 'http://coscup.org';
 		});
