--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -45,7 +45,7 @@ body {
 {% block body %}
 <div class="demo-card-wide mdl-card mdl-shadow--2dp">
   <div class="mdl-card__title" id="mdl-card__title">
-  	<img src="img/{{sp_id}}.jpg" width="200px"><br/>
+  	<img src="/sp/img/{{sp_id}}.jpg" width="200px"><br/>
     <h2 class="mdl-card__title-text">
     </h2>
   </div>
