--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -65,7 +65,7 @@ img > .checked {
   <div>
     <table>
       <tr>
-      {% for sp_id in check_in_data['status']) %}
+      {% for sp_id in check_in_data['status'] %}
         {% if check_in_data['status'][sp_id] %}
           [O]{{sp_id}}, 
         {% else %}
