--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -39,9 +39,9 @@ body {
 .demo-card-wide > .mdl-card__supporting-text {
 	text-align: center;
 }
-img > .checked {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
+.checked {
+  opacity: 0.3;
+  filter: alpha(opacity=30);
 }
 </style>
 </head>
