modify error handling and display

--- a/templates/check_in_failed.html
+++ b/templates/check_in_failed.html
@@ -49,7 +49,7 @@ body {
     </h2>
   </div>
   <div class="mdl-card__supporting-text">
-    你走錯地方了嗎? 這邊不是簽到點喔~
+    {{err_msg}}
   </div>
 </div>
 </body>
