--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 <title></title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.teal-green.min.css" />
-<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+<meta charset="UTF-8">
+<title>COSCUP 開源挑戰賽</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="./css/reset.css" rel="stylesheet">
+<link href="./css/linebot.css" rel="stylesheet">
 <script src="https://scdn.line-apps.com/channel/sdk/js/loader_20150909.js"></script>
 <script type="text/javascript">
 window.addEventListener("load", function(evt) {
@@ -47,64 +50,17 @@ LCS.Interface.registerTitleBarCallback(function(evt) {
   }
 });
 </script>
-<style>
-body {
-	padding-top: 20px;
-	background: #BBB;
-}
-.demo-card-wide.mdl-card {
-  width: 250px;
-  margin: 0 auto;
-}
-.demo-card-wide > .mdl-card__title {
-  color: #417C63;
-  height: 100px;
-}
-.demo-card-wide > .mdl-card__menu {
-  color: #417C63;
-}
-.demo-card-wide > .mdl-card__supporting-text {
-	text-align: center;
-}
-.checked {
-  opacity: 0.05;
-  filter: alpha(opacity=5);
-}
-</style>
 </head>
 <body>
 {% block body %}
-<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title" id="mdl-card__title">
-  	<img src="/sp/img/{{check_in_data['point']}}.jpg" width="200px"><br/>
-    <h2 class="mdl-card__title-text">
-    </h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-  {% if check_in_data['first_check'] %}
-  	已完成簽到!
-  {% else %}
-    您已在此簽到過了
-  {% endif %}
-  <br/>
-  您還有{{left}}個檢查點要收集，加油！
-  </div>
-  <div>
-    <table>
-      <tr>
-      {% for sp_id in check_in_data['status'] %}
-        {% if check_in_data['status'][sp_id] %}
-          <td><img class="checked" src="/sp/img/{{sp_id}}.jpg" width="60px"></td>
-        {% else %}
-          <td><img src="/sp/img/{{sp_id}}.jpg" width="60px"></td>
-        {% endif %}
-        {% if loop.index % 3 == 0 %}
-          </tr><tr>
-        {% endif %}
-      {% endfor %}
-      </tr>
-    </table>
-  </div>
+<div class= "banner">    
+   <img src="./img/main_withslogan.svg" alt="COSCUPlogo2016" class="logo"><br>
+    <img src="./img/eventTitle-01.png" alt="開源巔峰挑戰賽" class="eventTitle">
+</div>
+<div class="pointChart">
+  {% for sp_id in check_in_data['status'] %}
+  <div class="pointStamp {{check_in_data['booth']}} {%if check_in_data['status'][sp_id]%}pokemonGo{% endif %}"></div>
+  {% endfor %}
 </div>
 {% endblock %}
 </body>
