modify bkg img src

--- a/css/linebot.css
+++ b/css/linebot.css
@@ -1,5 +1,5 @@
 html{
-    background: top center #fffce8 url(../../img/bkg3.png) no-repeat;
+    background: top center #fffce8 url(../img/bkg3.png) no-repeat;
     background-size: cover;
     
 }
