replace key to booth

--- a/css/linebot.css
+++ b/css/linebot.css
@@ -38,52 +38,52 @@ html{
 }
 
 .D1{
-    background-image: url(../../img/logo/D1.png);
+    background-image: url(../img/logo/D1.png);
     
 }
 
 .D2{
-    background-image: url(../../img/logo/D2.png);
+    background-image: url(../img/logo/D2.png);
 }
 
 .G1{
-    background-image: url(../../img/logo/G1.png);
+    background-image: url(../img/logo/G1.png);
 }
 
 .G2{
-    background-image: url(../../img/logo/G2.png);
+    background-image: url(../img/logo/G2.png);
 }
 
 .G3{
-    background-image: url(../../img/logo/G3.png);
+    background-image: url(../img/logo/G3.png);
 }
 
 .G4{
-    background-image: url(../../img/logo/G4.png);
+    background-image: url(../img/logo/G4.png);
 }
 
 
 .G5{
-    background-image: url(../../img/logo/G5.png);
+    background-image: url(../img/logo/G5.png);
 }
 
 .G6{
-    background-image: url(../../img/logo/G6.png);
+    background-image: url(../img/logo/G6.png);
 }
 
 .G7{
-    background-image: url(../../img/logo/G7.png);
+    background-image: url(../img/logo/G7.png);
 }
 
 .G8{
-    background-image: url(../../img/logo/G8.png);
+    background-image: url(../img/logo/G8.png);
 }
 
 
 .G10{
-    background-image: url(../../img/logo/G10.png);
+    background-image: url(../img/logo/G10.png);
 }
 
 .G11{
-    background-image: url(../../img/logo/G11.png);
+    background-image: url(../img/logo/G11.png);
 }
