--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -63,5 +63,12 @@ LCS.Interface.registerTitleBarCallback(function(evt) {
   {% endfor %}
 </div>
 {% endblock %}
+<img src="../img/logo/D1.png" alt="../img/logo/D1.png" /><br/>
+<img src="/img/logo/D1.png" alt="/img/logo/D1.png" /><br/>
+<img src="/sp/img/logo/D1.png" alt="/sp/img/logo/D1.png" /><br/>
+<div id="txt_path"></div>
+<script type="javascript">
+  document.getElementById("txt_path").innerHTML = window.location;
+</script>
 </body>
 </html>
