--- a/css/linebot.css
+++ b/css/linebot.css
@@ -1,5 +1,5 @@
 html{
-    background: top center #fffce8 url(/sp/img/bkg3.png) no-repeat;
+    background: top center #fffce8 url(../img/bkg3.png) no-repeat;
     background-size: cover;
     
 }
@@ -45,57 +45,57 @@ box-shadow: 1px 1px 5px 1px rgba(132,156,127,1);
 }
 
 .D1{
-    background-image: url(/sp/img/logo/D1.png);
+    background-image: url(../img/logo/D1.png);
     
 }
 
 .D2{
-    background-image: url(/sp/img/logo/D2.png);
+    background-image: url(../img/logo/D2.png);
 }
 
 .G1{
-    background-image: url(/sp/img/logo/G1.png);
+    background-image: url(../img/logo/G1.png);
 }
 
 .G2{
-    background-image: url(/sp/img/logo/G2.png);
+    background-image: url(../img/logo/G2.png);
 }
 
 .G3{
-    background-image: url(/sp/img/logo/G3.png);
+    background-image: url(../img/logo/G3.png);
 }
 
 .G4{
-    background-image: url(/sp/img/logo/G4.png);
+    background-image: url(../img/logo/G4.png);
 }
 
 
 .G5{
-    background-image: url(/sp/img/logo/G5.png);
+    background-image: url(../img/logo/G5.png);
 }
 
 .G6{
-    background-image: url(/sp/img/logo/G6.png);
+    background-image: url(../img/logo/G6.png);
 }
 
 .G7{
-    background-image: url(/sp/img/logo/G7.png);
+    background-image: url(../img/logo/G7.png);
 }
 
 .G8{
-    background-image: url(/sp/img/logo/G8.png);
+    background-image: url(../img/logo/G8.png);
 }
 
 
 .G10{
-    background-image: url(/sp/img/logo/G10.png);
+    background-image: url(../img/logo/G10.png);
 }
 
 .G11{
-    background-image: url(/sp/img/logo/G11.png);
+    background-image: url(../img/logo/G11.png);
 }
 .pokemonGO{
-    background:rgba(255,255,255,0.8) url(/sp/img/done-01.png) no-repeat center;
+    background:rgba(255,255,255,0.8) url(../img/done-01.png) no-repeat center;
 }
 
 
