--- a/css/linebot.css
+++ b/css/linebot.css
@@ -71,7 +71,7 @@ box-shadow: 1px 1px 5px 1px rgba(132,156,127,1);
 
 
 .G5{
-    background-image: url(../img/logo/G5.png);
+    background-image: url(../../img/logo/G5.png);
 }
 
 .G6{
