test img path...

--- a/css/linebot.css
+++ b/css/linebot.css
@@ -45,7 +45,7 @@ box-shadow: 1px 1px 5px 1px rgba(132,156,127,1);
 }
 
 .D1{
-    background-image: url(../img/logo/D1.png);
+    background-image: url(./img/logo/D1.png);
     
 }
 
