--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../css/reset.css" rel="stylesheet">
-<link href="../css/linebot.css" rel="stylesheet">
+<link href="../css/main.css" rel="stylesheet">
 <script src="https://scdn.line-apps.com/channel/sdk/js/loader_20150909.js"></script>
 <script type="text/javascript">
 window.addEventListener("load", function(evt) {
@@ -59,7 +59,7 @@ LCS.Interface.registerTitleBarCallback(function(evt) {
 </div>
 <div class="pointChart">
   {% for sp_booth in check_in_data['status'] %}
-  <div class="pointStamp {{sp_booth}} {%if check_in_data['status'][sp_booth]%}pokemonGO{% endif %}">{{sp_booth}}</div>
+  <div class="pointStamp {{sp_booth}} {%if check_in_data['status'][sp_booth]%}pokemonGO{% endif %}"></div>
   {% endfor %}
 </div>
 {% endblock %}
