add finished template

--- a/templates/finished.html
+++ b/templates/finished.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title></title>
 <meta charset="UTF-8">
 <title>COSCUP 開源挑戰賽</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,11 +17,37 @@ window.addEventListener("load", function(evt) {
 			var displayName = data.displayName;
 			var statusMessage = data.statusMessage;
 			var pictureUrl = data.pictureUrl;
-			window.location = '/sp/{{sp_id}}/' + mid;
 		}, function() {
 			window.location = 'http://coscup.org';
 		});
 	}, false);
+});
+var options = {
+  pageKey: "key1",
+  titleBar: {
+    center: {
+      text: "COSCUP2016",
+      clickable: false
+    },
+    right: {
+      imgId: "btn_default",
+      text: "Close",
+      visible: true,
+      enable: true
+    }
+  }
+};
+LCS.Interface.updateTitleBar(options);
+LCS.Interface.registerTitleBarCallback(function(evt) {
+  switch(evt.target) {
+  case "RBUTTON":
+    window.location = "https://line.me/R/ti/p/%40test_coscup2016";
+    break;
+  case "LBUTTON":
+  case "BACK":
+  case "TITLE":
+    break;
+  }
 });
 </script>
 </head>
@@ -30,7 +57,14 @@ window.addEventListener("load", function(evt) {
    <img src="../img/main_withslogan.svg" alt="COSCUPlogo2016" class="logo"><br>
     <img src="../img/eventTitle-01.png" alt="開源巔峰挑戰賽" class="eventTitle">
 </div>
-<h2>Loading...</h2>
+<div class="pointChart">
+  {%if check_in_data['first_check'][sp_booth]%}
+  	<h2>恭喜你完成COSCUP2016 開源挑戰賽!</h2>請將此頁面展示給COSCUP攤位上的工作人員看，以換取精美贈品!
+  {% else %}
+    <h2>你已經換過贈品了喔!</h2>
+    再次感謝您參與今年的COSCUP2016 開源挑戰賽!
+  {% endif %}
+</div>
 {% endblock %}
 </body>
 </html>
