--- a/templates/test.html
+++ b/templates/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="pointStamp D1">
-<img class="cover_mask" src="../img/done-01.png"></img>
+<img class="cover_mask" src="./img/done-01.png"></img>
 </div>
 </body>
 </html>
