--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -67,7 +67,10 @@ LCS.Interface.registerTitleBarCallback(function(evt) {
   {% endfor %}
 </div>
 {% endblock %}
+<hr>
+<div>
 本系統以 LINE BOT API 開發，更多細節請參考<a href="https://developers.line.me/">LINE Developers頁面</a><br/>
 或者加入<a href="http://line.me/ti/p/9AirZgJAgb">LINE開發者官方社群</a>
+</div>
 </body>
 </html>
