--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -68,7 +68,7 @@ LCS.Interface.registerTitleBarCallback(function(evt) {
 </div>
 {% endblock %}
 <hr>
-<div>
+<div style="padding-top: 100px;">
 本系統以 LINE BOT API 開發，更多細節請參考<a href="https://developers.line.me/">LINE Developers頁面</a><br/>
 或者加入<a href="http://line.me/ti/p/9AirZgJAgb">LINE開發者官方社群</a>
 </div>
