--- a/templates/check_in.html
+++ b/templates/check_in.html
@@ -67,7 +67,7 @@ LCS.Interface.registerTitleBarCallback(function(evt) {
   {% endfor %}
 </div>
 {% endblock %}
-<div style="text-align: center;">
+<div style="width: 100%; padding-top: 200px; text-align: center;">
 <br/><br/>
 本系統以 LINE BOT API 開發，更多細節請參考<a href="https://developers.line.me/">LINE Developers頁面</a>
 或者加入<a href="http://line.me/ti/p/9AirZgJAgb">LINE開發者官方社群</a>
